GL/src/test/deca/syntax/invalid/deca_sans_objet/asm_string_unclosed.deca
// Description :
// test asm avec chaine non fermee
//
// Resultat :
// Erreur lexicale
// Ligne 9 : chaine non fermee
{

asm("LOAD #1 R1);
}
                                               





